about-me html/css

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
     <main>
       <load src="./partials/hero.html" />
-      <load src="./partials/aboutMe.html" />
+      <load src="./partials/About.html" />
       <load src="./partials/techSkills.html" />
       <load src="./partials/myProjects.html" />
       <load src="./partials/benefits.html" />
